@@ -22,6 +22,8 @@ use warnings;
 
 use Test::More tests => 67;
 
+## no critic (Subroutines::ProhibitSubroutinePrototypes)
+
 sub new_filename();
 
 #===============================================================================
@@ -46,7 +48,7 @@ MAIN: {
     my($file, $fh, $time, $errno, $lasterror, @stats, @lstats, @alt_stats);
 
     $file = new_filename();
-    open $fh, ">$file" or die "Can't create file '$file': $!\n";
+    open $fh, '>', $file or die "Can't create file '$file': $!\n";
     close $fh;
     $time  = time;
     @stats = stat $file;
@@ -61,7 +63,7 @@ MAIN: {
     unlink $file;
 
     $file = new_filename();
-    open $fh, ">$file" or die "Can't create file '$file': $!\n";
+    open $fh, '>', $file or die "Can't create file '$file': $!\n";
     close $fh;
     $time   = time;
     @lstats = lstat $file;
@@ -76,7 +78,7 @@ MAIN: {
     unlink $file;
 
     $file = new_filename();
-    open $fh, ">$file" or die "Can't create file '$file': $!\n";
+    open $fh, '>', $file or die "Can't create file '$file': $!\n";
     close $fh;
     $time   = time;
     @alt_stats = Win32::UTCFileTime::alt_stat($file);
@@ -91,7 +93,7 @@ MAIN: {
     unlink $file;
 
     $file = new_filename();
-    open $fh, ">$file" or die "Can't create file '$file': $!\n";
+    open $fh, '>', $file or die "Can't create file '$file': $!\n";
     close $fh;
     my($age, $utime, $ret);
     $time = time;
